# spotify-downloader

./: .bettercodehub.yml  .cache  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pylintrc  .readthedocs.yaml  .travis.yml  404.html  AUTH_DOCUMENTATION.md  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COREVALUES.md  Descargador de Spotify  Dockerfile  F  INSTALLATION.md  ISSUE_TEMPLATE.md  LICENSE  LICENSE.txt  Makefile  Pipfile  README.md  README_original.md  SpotDL-Web.bat  TODO.md  Take Control.songObjData  YTMusic.py  __argtest__.py  __clitest__.py  __main__.py  __main__.spec  __scratch2__.py  __scratch3__.py  __scratch__.py  __test__.py  blah.py  (+33 more)
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  PULL_REQUEST_TEMPLATE.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/workflows/: build-docs.yml  build-executables.yml  docker-hub-image-publish.yml  python-publish.yml  release-drafter.yml  spotify-downloader-ci.yml  standard-checks.yml  tests.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
Code Docs/: codeGuidelines.md  modules.md
Code Docs/search/: utils.md
Design Docs/: CORE VALUES.md  INTERFACES.md  PURPOSES.md
Docs/Code Docs/: codeGuidelines.md  oopRefresher.md
Docs/Design Docs/: CORE VALUES.md  PURPOSES.md  STYLE GUIDELINES.md
Hacks/: ABCint.py  YTMProcessing.py  __main__.py  embedTest.py  globalsAuth.py  logBlah.py  pprintYTMresp.py  sadf.py  test.py  ytMusic DL.py  ytmusic.py
Hacks/importLogging/: loggingBlah.py
Ref - Original Code/: CHANGES.md  README.md  setup.cfg  setup.py
Ref - Original Code/spotdl/: __init__.py
Temp/: ISSUE_TEMPLATE.md  OOP.md  Whole Lotta Love - 1990 Remaster.spotdlTrackingFile  YTM_test.py  __main__ ( testing).py  __main__.py  authorization.py  codeGuidelines.md  coreValues.md  dlTest.py  interfaces.md  interfaces.py  loggingBase.py  loggingConfig.py  objects.md  setup.py  test.m3u8  test.spotdlTrackingFile  workingDocs.md
Temp/Dropped/: interfaces.py
Temp/Package Structure/: __init__.py  loggingBase.py  searchProviders.py
Temp/REFS/: YTmusic response.jsonc  rawAlbumMeta.jsonc  rawArtistMeta.jsonc  rawPlaylistSearchResponse.jsonc  rawPlaylistTracksResponse.jsonc  rawPlaylistTracksResponseUsingPlaylistOnly.jsonc
Working Docs/: Design Notes.md  OOP.md  codeGuidelines.md  coreValues.md  interfaces.md  objects.md  workingDocs.md
YTMusic.egg-info/: PKG-INFO  SOURCES.txt
YT_Music.egg-info/: PKG-INFO  SOURCES.txt
asciinema-edit_0.0.6_linux_amd64.tar/asciinema-edit_0.0.6_linux_amd64/: README.md
core/: arguments.py  const.py  convert.py  embed_metadata.py  handle.py  internals.py  logger.py  metadata.py  misc.py  spotify_tools.py  youtube_tools.py
dev utils/: classLNC.py  fixSongLen.py  funcLNC.py  linecount.py  spotdlTF.py  totalLNC.py
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_VALUES.md  INSTALLATION.md  TROUBLESHOOTING.md  index.md  installation.md  requirements.txt  troubleshooting.md  usage.md
docs/code/: CODE_GUIDELINES.md  MODULES.md  OOP_REFRESHER.md
docs/design/: INTERFACES.md  PURPOSES.md
docs/source/: advanced-usage.rst  api.rst  available-options.rst  badges.rst  conf.py  download-tracks.rst  faq.rst  home.rst  index.rst  installation.rst
examples/: multipleSongsFromURLS.py  singleSongFromQuery.py  singleSongFromURL.py
installation/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/console/: index.html
reference/download/: index.html
reference/providers/: index.html
reference/types/: index.html
reference/utils/: index.html
scripts/: build.py  make_binzip.sh  termux.sh
scripts/docs/: gen_ref_nav.py  requirements.txt
search/: search_index.json
spodDL rework/: songObj.py  spotifyClient.py
spotdl/: __init__.py  __main__.py  _version.py  command_line.py  config.py  const.py  convert.py  download.py  downloader.py  handle.py  helpers.py  internals.py  lyrics.py  main.py  metadata.py  metadata_search.py  patcher.py  secret.py  set_metadata.py  spotDlApp.py  spotdl.py  spotify_tools.py  track.py  util.py  version.py  youtube_tools.py
spotdl-dev/: CHANGES.rst  README.rst  pyvenv.cfg
spotdl-dev/Scripts/: activate  activate.bat  get_gprof  get_objgraph  undill
spotdl/aDownload/: baseTests.py
spotdl/cli/: __init__.py  __main__.py  arguementHandler.py  argumentHandler.py  displayManager.py  downloadManager.py  logger.py  messageHandlers.py  progressHandlers.py
spotdl/command_line/: __init__.py  __main__.py  arguments.py  core.py  exceptions.py  exitcodes.py  helper.py  helpers.py  lib.py
spotdl/common/: workers.py
spotdl/console/: __init__.py  download.py  entry_point.py  get_yt_url.py  lyrics.py  meta.py  preload.py  remove.py  save.py  sync.py  url.py  url_user_friendly.py  web.py
spotdl/dlTools/: __init__.py
spotdl/download/: Legacydownloader.py  __init__.py  config.py  dlBase.py  downloadManager.py  downloadProcesses.py  downloader-legacy.py  downloader.py  downloadingActual.py  embed_metadata.py  enhanced_downloader.py  ffmpeg.py  messageHandlers.py  (+8 more)
spotdl/download-v3-legacy/: downloader.py  progressHandlers.py
termux/: setup_spotdl.sh  termux-url-opener
test/: ffmeg_bin.py  ffmpeg_bin.py  list.txt  loader.py  test_basic.py  test_defaults.py  test_download_with_metadata.py  test_dry_run.py  test_handle.py  test_internals.py  test_list.py  test_metadata.py  test_no_metadata.py  test_patcher.py  test_playlist.py  test_sample.py  test_simple.py  test_single.py  test_spotify.py  test_spotify_tools.py  test_username.py  test_with_metadata.py  test_without_metadata.py  test_youtube_tools.py
tests/: README.md  conftest.py  coverage_dict.py  instrumentation.py  regressions.py  test_downloader.py  test_entry_point.py  test_ffmpeg.py  test_init.py  test_main.py  test_matching.py  test_provider.py  test_provider_utils.py
troubleshooting/: index.html
usage/: index.html
(+511 files in other folders)
