[tool.poetry]
name = "spotdl"
version = "4.2.7"
description = "Download your Spotify playlists and songs along with album art and metadata"
license = "MIT"
authors = ["spotDL Team <spotdladmins@googlegroups.com>"]
maintainers = ["xnetcat <xnetcat.dev@gmail.com>"]
readme = "README.md"
repository = "https://github.com/spotDL/spotify-downloader.git"
homepage = "https://github.com/spotDL/spotify-downloader/"
documentation = "https://spotdl.rtfd.io/en/latest/"
keywords = ["spotify", "downloader", "spotdl", "music"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"

spotipy = [
    {version = "^2.23.0", python = "<=3.8"},
    {version = "^2.24.0", python = ">3.8"},
]
ytmusicapi = [
    {version = "^1.3.2", python = "<3.10"},
    {version = "^1.4.1", python = ">=3.10"},
]
pytube = "^15.0.0"
yt-dlp = "^2024.8.6"
mutagen = "^1.47.0"
rich = "^13.7.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
rapidfuzz = "^3.9.6"
python-slugify = {extras = ["unidecode"], version = "^8.0.4"}
uvicorn = "^0.23.2"
pydantic = "^2.8.2"
fastapi = "^0.103.0"
platformdirs = "^4.2.2"
pykakasi = "^2.3.0"
syncedlyrics = "^1.0.1"
soundcloud-v2 = "^1.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pyfakefs = "^5.6.0"
pytest-cov = "^5.0.0"
pytest-subprocess = "^1.5.2"
pytest-asyncio = "^0.21.1"
mypy = "^1.11.2"
pylint = "^3.2.6"
black = "^24.8.0"
mdformat-gfm = "^0.3.5"
types-orjson = "^3.6.2"
types-python-slugify = "^8.0.2.20240310"
types-requests = "==2.31.0.6"
types-setuptools = "^73.0.0.20240822"
types-toml = "^0.10.8.7"
types-ujson = "^5.10.0.20240515"
pyinstaller = "^6.10.0"
mkdocs = "^1.6.0"
isort = "^5.13.2"
dill = "^0.3.7"
mkdocs-material = "^9.5.33"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.8"
pymdown-extensions = "^10.9"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.0"
mkdocs-section-index = "^0.3.5"
vcrpy = "^6.0.1"
pytest-recording = "^0.13.1"

[tool.poetry.scripts]
spotdl = "spotdl:console_entry_point"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
limit-inference-results = 0
fail-under = 9

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "vcr",
]
