[metadata]
version = 4.0.0

name = spotdl
url = https://github.com/spotdl/spotdl
download_url = https://pypi.org/project/spotdl
author = spotDL Team
author_email = spotdladmins@googlegroups.com
license = MIT
description = Download your Spotify playlists and songs along with album art and metadata
long_description = file:README.md
long_description_content_type = text/markdown
keywords = spotify downloader download music youtube mp3 album metadata
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Utilities

[options]
include_package_data = true
install_requires =
    spotipy
    beautifulsoup4
    requests
    awesome-slugify
    ytmusicapi
    rapidfuzz
    pytube
    yt-dlp
    mutagen
    rich

python_requires = >= 3.7
packages = find:

[options.entry_points]
console_scripts=
    spotdl = spotdl:console_entry_point

[options.extras_require]
test =
    pytest
    pytest-mock
    pytest-vcr
    pyfakefs
    pytest-cov
    pytest-subprocess
    pytest-asyncio
    mypy
    flake8
web =
    uvicorn
    pydantic
    fastapi

[mypy]
ignore_missing_imports = True
