[metadata]
version = 3.9.6

name = spotdl
url = https://github.com/spotDL/spotify-downloader
download_url = https://pypi.org/project/spotdl/
author = spotDL Team
author_email = spotdladmins@googlegroups.com
license = MIT
description = Download your Spotify playlists and songs along with album art and metadata
long_description = file:README.md
long_description_content_type = text/markdown
keywords = spotify downloader download music youtube mp3 album metadata
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia
    Topic :: Multimedia :: Sound/Audio
    Topic :: Utilities

[options]
include_package_data = true
install_requires =
    spotipy >= 2.19.0
    pytube >= 11.0.0
    rich
    rapidfuzz
    mutagen
    ytmusicapi
    yt-dlp
    beautifulsoup4
    requests
    Unidecode
    setuptools
python_requires = >=3.6.1
packages = find:

[options.extras_require]
test =
    pytest >= 6.0
    pytest-mock >= 3.3.1
    pytest-vcr >= 1.0.2
    pyfakefs >= 4.3.0
    pytest-cov >= 2.10.1
    pytest-subprocess
dev =
    tox
    mypy
    flake8
    types-setuptools
    types-requests

[options.entry_points]
console_scripts=
    spotdl = spotdl:console_entry_point

[mypy]
ignore_missing_imports = True

[flake8]
max-line-length = 100
ignore = E301,W605
